--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     annotationProcessor "androidx.room:room-compiler:2.3.0"
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
     def nav_version = "2.3.5"
 
     // Java language implementation
