--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,17 @@
         <activity
             android:name=".LessonsActivity"
             android:label="@string/title_activity_lessons"
-            android:theme="@style/Theme.Tilde_alfa.NoActionBar"></activity>
-        <activity android:name=".ExercisesActivity" />
-        <activity android:name=".Principa" />
-        <activity android:name=".MainActivity">
+            android:theme="@style/Theme.Tilde_alfa.NoActionBar"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ExercisesActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Principa"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
